--- a/src/assets/css/homepage.css
+++ b/src/assets/css/homepage.css
@@ -10,6 +10,20 @@
     width: 100%;
 }
 
+.banner-container {
+    width: 100%;
+    height: 300px ;
+    background-color: lightgrey;
+    border-top: black;
+    border-top-style: solid;
+    border-bottom:black; 
+    border-bottom-style: solid;  
+    background-image: url(../img/background.avif);  
+    background-size: cover;
+    background-position:center;
+
+}   
+
 .card-container {
     margin-top: 100px;
     margin-bottom: 100px;
@@ -21,42 +35,37 @@
     justify-content: space-around;
 }
 
-.card-header {
+.homepage-wrapper .card-container .card .card-header {
     font-size: large;
-    color: black;
 
 }
 
-.card {
+.homepage-wrapper .card-container .card  {
     width: 450px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
-    border-style: solid;
-    border-color: black;
-    border-radius: 20px;
-    background-color: #ffcd82;
-}
-
-.cardimgs {
     border: black;
     border-style: solid;
     border-radius: 20px;
-    width: 400px;
+    background-color: #ffcd82;
+    margin: 10px;
 }
 
-.card-header:hover {
-    color: darksalmon;
+.homepage-wrapper .card-container .card  .cardimgs {
+    width: 100%;
+    border-top: black;
+    border-top-style: solid;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
-.card:hover {
+.homepage-wrapper .card-container .card .card-header:hover {
+    color: white;
+}
+
+.homepage-wrapper .card-container .card:hover {
     transform: scale(1.1);
-}
-
-@media  screen and (max-width: 1448px) {
-    
-    /* .card-container {
-        flex-direction: column;
-    } */
-    
 }
