--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -12,47 +12,42 @@
     text-decoration: none;
 }
 
-.title {
+.Nav .brand .title {
     font-family: 'Alex Brush';
-    font-size: 80px;
+    font-size: 100px;
     color: black;
     text-decoration: none;
-    padding: 60px;
-    padding-right: 0px;
+    padding: 80px;
     width: fit-content;
-    margin: 0;
 }
 
 .title2 {
     color: darkolivegreen;
 }
 
-.nav-container {
-    padding-top: 110px;
-    padding-right: 20px;
-    padding-left: 0px;
+.Nav .nav-container {
     color: black;
     font-family: 'Poppins', sans-serif;
-    font-size: larger;
-}
-
-.nav-collapse {
-    justify-content: right;
+    font-size: x-large;
+    width: fit-content;
+    margin-right: 80px;
 }
 
 a.nav-link {
     text-decoration: none;
     margin: 15px;
+    text-align: center;
 }
 
 a.nav-link:hover {
     color: #F4D6CC;
 }
 
-.nav-button {
-    color: grey;
+.navbar-toggler {
+    color: black;
+    background-color: black;
     margin: 10px;
-    display: none;
+    text-align: right;
 }
 
 a.nav-link:focus {
@@ -60,67 +55,67 @@ a.nav-link:focus {
 
 }
 
-@media screen and (max-width: 1170px) {
-
-    .title {
-        font-size: 60px;
-    }
-
-}
 
 @media screen and (max-width: 1024px) {
 
-    .title {
-        font-size: 50px;
+    .Nav {
+        flex-direction: row;
     }
 
-    .nav-container {
-        padding-top: 85px;
-        font-size: large ;
+    .Nav .nav-container {
+        padding: 20px;
+        margin: 0px;
+        font-size: auto;
+
+    }
+
+    .Nav .brand .title {
+        font-size: auto;
+        padding: 80px;
+
     }
 
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 992px) {
 
     .Nav {
         flex-direction: column;
+        justify-content: center ;
     }
 
-    .title {
+    .Nav .nav-container {
         width: 100%;
-        font-size: 80px;
-        padding-left: 0px;
+        text-align: right;
+        flex-direction: column;
+
+    }
+
+    .Nav .brand .title {
+        font-size: 70px;
+        padding: 80px;
+        padding-right: 30px;
+
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+
+    .Nav .nav-container {
+        width: 100%;
+        text-align: right;
+        flex-direction: column;
         padding-bottom: 30px;
-        text-align: center;
+
     }
 
-    .nav-container {
-        text-align: center;
-        font-size: larger;
-        padding: 40px;
-    }
+    .Nav .brand .title {
+        font-size: 50px;
+        padding: 80px;
+        padding-bottom: 30px;
 
-}
-
-@media screen and (max-width: 570px) {
-
-    .title {
-        font-size: 60px;
-        padding: auto;
-    }
-
-}
-
-@media screen and (max-width: 412px) {
-
-    a.card {
-        max-width: 300px ;
-        margin: 10px;
-    }
-
-    .cardimgs {
-        max-width: 290px;
     }
 
 }
